# UniMatch

./: .gitignore  Grafovi.ipynb  README.md  pyproject.toml
backend/: db.sqlite3
code/: baza.sql  pyproject.toml
code/backend/api/: admin.py  models.py  urls.py  views.py
code/backend/api/migrations/: 0003_alter_forma_safetymax_alter_forma_safetymin.py  0004_remove_saveduniversities_city.py  0005_saveduniversities_choiceno_saveduniversities_major_and_more.py  0007_remove_saveduniversities_choiceno_and_more.py  0010_alter_forma_colmax_alter_forma_colmin_and_more.py
code/backend/authentication/: backends.py  urls.py
code/backend/authentication/migrations/: 0001_initial.py
code/backend/backend/: settings.py  urls.py
code/datasets/completeDatasets/: indexComplete.csv  indexComplete.xlsx
code/datasets/fillers/: continent.csv
code/datasets/formating/: notReady.txt
code/datasets/notebooks/: SafetyCategory.ipynb  datasetPreparation.ipynb  deepseekComparison.ipynb  indexingDataset.ipynb
code/docs/: plan_projekta.docx
code/docs/CHATGPT podaci/: CHATGPT u pronalasku podataka.docx  Korelacija.xlsx  Tekst-tablica.ipynb  Tekst-tablica2.ipynb  Universities_Data.xlsx  Universities_Data1000.xlsx  Universities_DataCoord.xlsx  University_Dataset_20_Countries.xlsx  University_Dataset_Partial.xlsx  Untitled.ipynb  coord.txt  coord.xlsx  coord1000.txt  pricesComplete.xlsx  universities.txt
code/docs/Gemini podaci/: Grafovi.ipynb  Universities_DataFull_Gemini.xlsx  pricesComplete.xlsx  universities2.csv
code/frontend/UniMatch.Frontend/: package.json
docs/: docs.docx  (+2 more)
(+142 files in other folders)
