[project]
name = "unimatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.4",
    "fuzzywuzzy>=0.18.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pycountry>=24.6.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
